feat: create board & associations middleware
* complete organisation.findOneById method
* minor cleanup & linting
