# server/routes.ts
@@ -3,9 +3,12 @@ import { Router } from 'express';
 
 import { createAccount, getAccounts } from './controllers/accounts';
 import { login } from './controllers/authentication/login';
+import { createBoard } from './controllers/boards';
 import { createOrganisations } from './controllers/organisations';
+import { organisationWithRole } from './lib/middlewares/associations';
 import { authenticate } from './lib/middlewares/authentications';
 import { errorHandler } from './lib/middlewares/error_handler';
+import { OrganisationRole } from './types/repositories';
 
 export function router(r: Router): Router {
   r.get('/health', HealthEndpoint(new HealthChecker()));
@@ -22,8 +25,8 @@ export function router(r: Router): Router {
   r.post('/v1/organisations', createOrganisations);
   // r.post('/v1/organisations/:organisationid/invites');
   // r.post('/v1/organisations/:organisationid/joins');
-  r.post('/v1/organisations/:organisationid/boards');
-  // r.get('/v1/organisations/:organisationid/boards');
+  r.get('/v1/organisations/:organisationid/boards');  /// list board
+  r.post('/v1/organisations/:organisationid/boards', organisationWithRole(OrganisationRole.Manager), createBoard);
   // r.post('/v1/organisations/:organisationid/boards/:boardid?include=cards');
 
   // r.post('/v1/organisations/:organisationid/boards/:boardid/cards'); /// add cards
